# BreadcrumbAddressbar

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
.kiro/steering/: product.md  structure.md  tech.md
breadcrumb_addressbar/: __init__.py  core.py  logger_setup.py  popup.py  themes.py  widgets.py
breadcrumb_addressbar/examples/: __init__.py  comprehensive_demo.py
docs/: BreadcrumbAddressBar.md  CODE_QUALITY.md  QtComboBox実装計画.md  manual_test_issues.md  popup_implementation_analysis.md
examples/: basic_example.py  dropdown_test.py  dropdown_test_fix.py  manual_test_demo.py  phase2_example.py  qt_theme_demo.py
scripts/: check_code_quality.sh  ci_test.sh  format_code.sh  release.py
tests/: test_core.py  test_logger_setup.py  test_popup.py  test_themes.py  test_widgets.py
