[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breadcrumb-addressbar"
version = "1.0.1"
description = "A breadcrumb-style address bar for PySide6/PyQt6 file managers with theme support"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "scottlz0310", email = "scott.lz0310@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14.2"
dependencies = ["PySide6>=6.10.2", "qt-theme-manager>=1.1.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "basedpyright>=1.37.3",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.5.1",
]
test = ["pytest>=9.0.2", "pytest-qt>=4.5.0", "pytest-cov>=7.0.0"]
ci = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "pytest-cov>=7.0.0",
    "coverage>=7.13.3",
    "ruff>=0.15.0",
    "basedpyright>=1.37.3",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit
]
ignore = ["E203", "S101", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
"examples/*" = ["S101", "E501"]
"breadcrumb_addressbar/*.py" = ["N802", "N815"] # Allow Qt naming conventions
"scripts/*.py" = ["S602"]                       # Allow shell=True in scripts

[tool.ruff.lint.isort]
known-first-party = ["breadcrumb_addressbar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = ["qt: marks tests as requiring Qt (deselect with '-m \"not qt\"')"]

[tool.coverage.run]
source = ["breadcrumb_addressbar"]
omit = ["*/tests/*", "*/examples/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportImportCycles = false
reportUnsupportedDunderAll = false # PEP 562 lazy loading support

[[tool.basedpyright.executionEnvironments]]
root = "breadcrumb_addressbar"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
